$Id: ChangeLog,v 1.433 2008/06/16 13:04:28 haraldkipp Exp $

2008-06-15  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/avr.nut, arch/Makefile: Temporarily removed wlandrv.c
	from build due to GCC 4.3 warning.

	* include/arch/avr/gcc.h: Added Thiago's patch to fix
	_SLEEP_MODE_MASK problem, which is no longer public in
	the latest avrlibc. 


2008-06-15  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/os/context_gcc.c, arch/avr/os/context_icc.c,
	crt/malloc.c, include/sys/heap.h, include/sys/thread.h,
	os/heap.c, os/thread.c: Rolled back all changes done
	after 2008-06-05. Parts of Moritz' code hadn't been well
	tested and his contribution was meant as an RFC.


2008-06-10  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/sys/heap.h: added missing include for C99 type usage

2008-06-09  Thiago A. Correa
        * ${list of modified files goes here}: NutHeapRealloc code contributed by Moritz Struebe.
        Add realloc to override libc's realloc using NutHeapRealloc

2008-06-05  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/st7036_at91.c, conf/arch/arm.nut, 
	conf/at91sam7x-ek-radio.conf, conf/at91sam7x-ek.conf,
	conf/at91sam9260-ek-radio.conf, conf/at91sam9260-ek.conf,
	conf/eir10b.conf: The port ID is now individually
	configurable for each signal line. Thus, there is no need to set 
	board specific defaults in the driver's source file. Settings had 
	been moved to the configuration files. This change may break your 
	existing LCD configuration.


2008-05-25  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* net/icmpin.c: Fixed size comparision in NutIcmpUnreach

2008-04-21  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* pro/ssi.c: Nicer implement query string feature and save some
          memory
	
	* os/condition.c, include/sys/condition.h: Implemented condition
	  variables to use with NutOS as an application candy

	* doc/gen/nutdoc_en.txt: Added description of condition variables 
